--- a/index.html
+++ b/index.html
@@ -6,16 +6,166 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal trainer</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css" integrity="sha512-+mlclc5Q/eHs49oIOCxnnENudJWuNqX5AogCiqRBgKnpoplPzETg2fkgBFVC6WYUVxYYljuxPNG8RE7yBy1K+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
-
-
-    
-
-
-
-
+    <!--  Barra de navegación -->
+    <header>
+        <a href="#" class="logo">Gabriel <span>IB</span></a>
+        <nav class="menu">
+            <a href="#">Inicio</a>
+            <a href="#">Servicios</a>
+            <a href="#">Sobre mi</a>
+            <a href="#">Galeria</a>
+            <a href="#">Reseñas</a>
+            <a href="#">Contacto</a>
+        </nav>
+        <button class="btn-menu hamburger   hamburger--elastic" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+        </button>
+    </header>
+    <!-- Sección inicio -->
+    <section id="inicio" class="inicio">
+        <div class="content">
+            <h3>Personal Trainer</h3>
+            <p>¿Necesitas un personal trainer?</p>
+            <a href="#" class="btn">Leer mas</a>
+        </div>
+        <div class="image">
+            <img src="./images/Skipping.png">
+        </div>
+    </section>
+    <section id="servicios" class="servicios">
+        <h1 class="heading">Mis <span>servicios</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="./images/clases.png" alt="">
+                <h3>Clases personalizadas</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aut veniam doloremque!</p>
+                <a href="#" class="btn">Leer mas</a>
+            </div>
+            <div class="box">
+                <img src="./images/Running.png" alt="">
+                <h3>Running</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aut veniam doloremque!</p>
+                <a href="#" class="btn">Leer mas</a>
+            </div>
+            <div class="box">
+                <img src="./images/Streching.png" alt="">
+                <h3>Streching</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aut veniam doloremque!</p>
+                <a href="#" class="btn">Leer mas</a>
+            </div>
+        </div>
+    </section>
+    <section id="sobremi" class="sobremi">
+        <h1 class="heading">Sobre <span>mi</span></h1>
+        <div class="row">
+            <div class="image">
+                <img src="./images/SobreMi.png" alt="">
+            </div>
+            <div class="content">
+                <h3 class="title">Mi nombre es <span>Gabriel Ibarra</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, tempore! Nobis ducimus in tempore maiores!</p>
+                <a href="#" class="btn">Leer mas</a>
+            </div>
+        </div>
+    </section>
+    <section id="galeria" class="galeria">
+        <h1 class="heading">Mis <span>fotos</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="" alt="">
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
+    <section id="reseñas" class="reseñas">
+        <h1 class="heading">Mis <span>reseñas</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="user">
+                    <img src="./images/avataaars.png" alt="">
+                    <div class="info">
+                        <h3>nombre</h3>
+                        <div class="stars">
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon><ion-icon name="star-sharp"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sequi ipsum saepe hic consectetur expedita maiores ab dolore, deleniti suscipit doloribus qui? Veritatis ducimus vel repudiandae nisi dolore nostrum esse!</p>
+            </div>
+            <div class="box">
+                <div class="user">
+                    <img src="./images/avataaars(1).png" alt="">
+                    <div class="info">
+                        <h3>nombre</h3>
+                        <div class="stars">
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon><ion-icon name="star-sharp"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sequi ipsum saepe hic consectetur expedita maiores ab dolore, deleniti suscipit doloribus qui? Veritatis ducimus vel repudiandae nisi dolore nostrum esse!</p>
+            </div>
+            <div class="box">
+                <div class="user">
+                    <img src="./images/avataaars(2).png" alt="">
+                    <div class="info">
+                        <h3>nombre</h3>
+                        <div class="stars">
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon>
+                            <ion-icon name="star-sharp"></ion-icon><ion-icon name="star-sharp"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sequi ipsum saepe hic consectetur expedita maiores ab dolore, deleniti suscipit doloribus qui? Veritatis ducimus vel repudiandae nisi dolore nostrum esse!</p>
+            </div>
+        </div>
+    </section>
+    <section id="contacto" class="contacto">
+        <h1 class="heading">Mi <span>contacto</span></h1>
+        <div class="box-container">
+            <div class="contacts">
+                <ion-icon name="call-sharp"></ion-icon>
+                <h3>Celular</h3>
+                <p>+5491122334455</p>
+            </div>
+            <div class="contacts">
+                <ion-icon name="mail-sharp"></ion-icon>
+                <h3>Mail</h3>
+                <p>gabito@gmail.com</p>
+            </div>
+            <div class="contacts">
+                <ion-icon name="location-sharp"></ion-icon>
+                <h3>Ubicación</h3>
+                <p>Francisco Alvares, Buenos Aires</p>
+            </div>
+        </div>
+    </section>
 
     <!-- App -->
     <script src="js/app.js"></script>
