--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <!-- App -->
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="module"></script>
     <!-- Ion-icons -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
