--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="inicio" class="inicio">
         <div class="content">
             <h3>Personal Trainer</h3>
-            <p>¿Necesitas un personal trainer?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat maiores impedit ab corporis odit vero.</p>
             <a href="#" class="btn">Leer mas</a>
         </div>
         <div class="image">
